--- a/dream.ipynb
+++ b/dream.ipynb
@@ -246,7 +246,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "img = np.float32(PIL.Image.open('sky1024px.jpg'))\n",
+      "img = np.float32(PIL.Image.open('DCS_8059.jpg'))\n",
       "showarray(img)"
      ],
      "language": "python",
@@ -478,7 +478,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "guide = np.float32(PIL.Image.open('flowers.jpg'))\n",
+      "guide = np.float32(PIL.Image.open('20201028_075143.jpg'))\n",
       "showarray(guide)"
      ],
      "language": "python",
